Changed register layout/look

--- a/html_previews/register.html
+++ b/html_previews/register.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <div id="register">
+            <div id="registerIMG">
+                <img src="img/Register.png" alt="register">
+            </div>
             <div id="registerForm">
                 <div id="registerFormPlacement">
             <h1>Register</h1>
